# roadmap_cv_cuda

./: .gitignore  CMakeLists.txt  CUDA roadmap.md  CV roadmap.md  README.md  vcpkg.json
CUDA/Fundamentals/Architecture and Memory Model/: CUDA memory hierarchy.md  GPU architecture.md  Memory coalescing principles.md  Project 1a - Vector addition with performance.md  Project 1b - Matrix multiplication.md  RTX 3060 ti specs.md  Thread organization.md  vector_add.cpp  vector_add.cu
CV/Advanced Classical Computer Vision/Feature Detection and Description Mastery/: Feature matching strategies.md  Harris corner detector mathematics.md  Other descriptos  SIFT.md  Scale-space theory.md
include/: HarrisCornerDetector.hpp  SIFT.hpp
src/: HarrisCornerDetector.cpp  SIFT.cpp  matri_mult.cu
